--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image" href="images/NA MU.svg">
+    <link rel="icon"
+      type="image"
+      href="images/favicon.svg">
     <title>ХУДОЖНІЙ МУЗЕЙ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,7 +36,7 @@
           </div>
           <div class="grid grid--block">
             <div class="grid__item--tablet-1-2 grid__item--desktop-3-5">
-              <a href="#contacts" class="header__button">
+              <a href="#events" class="header__button">
                 <div class="header__button-text">
                   Квитки
                 </div>
@@ -134,7 +136,7 @@
             <div class="menu__remark">
               <strong>Вихідні:</strong>
               понеділок, вівторок
-              </br>
+              <br>
               Каса припиняє роботу за 1 годину до закриття музею
             </div>
           </div>
@@ -147,69 +149,79 @@
           <div class="event__title">
             Актуальні події
           </div>
-            <div class="event__block-1 grid grid--block">
-              <div class="grid__item--desktop-1-7  grid__item--tablet-1-6">
-                <div class="event__painting">
-                  <img src="../src/images/painting1.jpg" alt="painting1" class="events__photo">
-                </div>
+          <div class="event__block-1 grid grid--block">
+            <div class="grid__item--desktop-1-7  grid__item--tablet-1-6">
+              <div class="event__painting">
+                <img src="../src/images/painting1.jpg"
+                  alt="painting1"
+                  class="events__photo">
               </div>
-              <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
-                <div class="just__description">
-                  <div class="event__painting--timetable">
-                    <div class="exibition">Виставка</div>
-                    <div class="exibition__date">26.08-29.11.2019</div>
+            </div>
+            <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
+              <div class="just__description">
+                <div class="event__painting--timetable">
+                  <div class="exibition">Виставка</div>
+                  <div class="exibition__date">26.08-29.11.2019</div>
+                </div>
+                <div class="exibition__name">
+                  <div class="exibition__name-words">
+                    Йду і повертаюсь
                   </div>
-                  <div class="exibition__name">
-                    <div class="exibition__name-words">
-                      Йду і повертаюсь
-                    </div>
-                    <div class="exibition__name-square" >
-                      <img src="../src/images/Rectangle.svg" alt="square" class="square">
-                    </div>
+                  <div class="exibition__name-square" >
+                    <img src="../src/images/Rectangle.svg"
+                      alt="square"
+                      class="square">
                   </div>
-                  <div class="exibition__description">
-                    Національний Художній Музей України
-                    презентує унікальну частину колекції
-                    Градобанку - українське мистецтво
-                    другої половини 1980-1995 років.
-                  </div>
+                </div>
+                <div class="exibition__description">
+                  Національний Художній Музей України
+                  презентує унікальну частину колекції
+                  Градобанку - українське мистецтво
+                  другої половини 1980-1995 років.
                 </div>
               </div>
             </div>
-            <div class="event__block-2 grid grid--block">
-              <div class="grid__item--desktop-1-7 grid__item--tablet-1-6">
-                <div class="event__painting">
-                  <img src="../src/images/painting2.jpg" alt="painting2" class="events__photo">
-                </div>
+          </div>
+          <div class="event__block-2 grid grid--block">
+            <div class="grid__item--desktop-1-7 grid__item--tablet-1-6">
+              <div class="event__painting">
+                <img src="../src/images/painting2.jpg"
+                  alt="painting2"
+                  class="events__photo">
               </div>
-              <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
-                <div class="just__description">
-                  <div class="event__painting--timetable">
-                    <div class="exibition">Виставка</div>
-                    <div class="exibition__date">26.08-29.11.2019</div>
+            </div>
+            <div class="grid__item--desktop-8-12 grid__item--tablet-1-6">
+              <div class="just__description">
+                <div class="event__painting--timetable">
+                  <div class="exibition">Виставка</div>
+                  <div class="exibition__date">26.08-29.11.2019</div>
+                </div>
+                <div class="exibition__name">
+                  <div class="exibition__name-words">
+                    І спогади і мрії
                   </div>
-                  <div class="exibition__name">
-                    <div class="exibition__name-words">
-                      І спогади і мрії
-                    </div>
-                    <div class="exibition__name-square" >
-                      <img src="../src/images/Rectangle.svg" alt="square" class="square">
-                    </div>
+                  <div class="exibition__name-square" >
+                    <img src="../src/images/Rectangle.svg"
+                      alt="square"
+                      class="square">
                   </div>
-                  <div class="exibition__description">
+                </div>
+                <div class="exibition__description">
                     Національний художній музей України
                     до 100 річчя від дня народження
                     видатної української художниці
                     Тетяни Яблонської  відкриває ретроспективну
                     ювілейну виставку «І спогади і мрії».
-                  </div>
                 </div>
               </div>
             </div>
+          </div>
         </div>
         <div class="event__lecture">
           <div class="event__bottom">
-            <img src="../src/images/painting3.jpg" alt="painting3" class="lecture__painting">
+            <img src="../src/images/painting3.jpg"
+              alt="painting3"
+              class="lecture__painting">
           </div>
           <div class="lecture__info">
             <div class="photo__container">
@@ -234,21 +246,27 @@
 
             <div class=" grid grid--flex">
 
-                <div class="gallery grid__item--desktop-1-4 ">
-                  <img src="../src/images/gallery1.jpg" alt="picture1" class="gallery__image">
-                </div>
-
-                <div class="gallery grid__item--desktop-5-12 ">
-                  <img src="../src/images/gallery2.jpg" alt="picture1" class="gallery__image">
-                </div>
-                <div class="empty"></div>
-
+              <div class="gallery grid__item--desktop-1-4 ">
+                <img src="../src/images/gallery1.jpg"
+                  alt="picture1"
+                  class="gallery__image">
+              </div>
+              <div class="gallery grid__item--desktop-5-12 ">
+                <img src="../src/images/gallery2.jpg"
+                  alt="picture1"
+                  class="gallery__image">
+              </div>
+              <div class="empty"></div>
               <div class="gallery grid__item--desktop-1-8 ">
-                <img src="../src/images/gallery3.jpg" alt="picture1" class="gallery__image">
+                <img src="../src/images/gallery3.jpg"
+                  alt="picture1"
+                  class="gallery__image">
               </div>
 
               <div class="gallery grid__item--desktop-9-12">
-                <img src="../src/images/gallery4.jpg" alt="picture1" class="gallery__image">
+                <img src="../src/images/gallery4.jpg"
+                  alt="picture1"
+                  class="gallery__image">
               </div>
             </div>
           </div>
@@ -257,19 +275,27 @@
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="../src/images/gallery1.jpg" alt="picture1" class="swiper-slide__img">
+                <img src="../src/images/gallery1.jpg"
+                  alt="picture1"
+                  class="swiper-slide__img">
               </div>
 
               <div class="swiper-slide">
-                <img src="../src/images/gallery2.jpg" alt="picture2" class="swiper-slide__img">
+                <img src="../src/images/gallery2.jpg"
+                  alt="picture2"
+                  class="swiper-slide__img">
               </div>
 
               <div class="swiper-slide">
-                <img src="../src/images/gallery3.jpg" alt="picture3" class="swiper-slide__img">
+                <img src="../src/images/gallery3.jpg"
+                  alt="picture3"
+                  class="swiper-slide__img">
               </div>
 
               <div class="swiper-slide">
-                <img src="../src/images/gallery4.jpg" alt="picture4" class="swiper-slide__img">
+                <img src="../src/images/gallery4.jpg"
+                  alt="picture4"
+                  class="swiper-slide__img">
               </div>
             </div>
 
@@ -277,9 +303,6 @@
 
           </div>
         </div>
-
-
-
       </section>
       <section class="page__section subscribe">
         <div class="subscribe__container">
@@ -294,12 +317,14 @@
               <form
                 action="#"
                 class="form__subscr">
-                  <input class="form__field--subscr" type="email"
-                    placeholder="E-mail" required
-                  >
-                  <button class="button__orange">
-                    <img src="../src/images/Vector_black.svg" alt="button" class="arrow">
-                  </button>
+                <input class="form__field--subscr" type="email"
+                  placeholder="E-mail" required
+                >
+                <button class="button__orange">
+                  <img src="../src/images/Vector_black.svg"
+                   alt="button"
+                   class="arrow">
+                </button>
               </form>
             </div>
           </div>
@@ -318,11 +343,19 @@
                 MU
               </a>
               <div class="footer__icon-social">
-                <a href="https://www.facebook.com/" target="_blank" class="icon icon__social">
-                  <img src="../src/images/Facebook.svg" alt="facebook" class="footer__logo">
+                <a href="https://www.facebook.com/"
+                  target="_blank"
+                  class="icon icon__social">
+                  <img src="../src/images/Facebook.svg"
+                    alt="facebook"
+                    class="footer__logo">
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" class="icon icon__social">
-                  <img src="../src/images/inst.png" alt="instagram" class="footer__logo">
+                <a href="https://www.instagram.com/"
+                  target="_blank"
+                  class="icon icon__social">
+                  <img src="../src/images/inst.png"
+                    alt="instagram"
+                    class="footer__logo">
                 </a>
               </div>
             </div>
@@ -365,8 +398,8 @@
             </div>
             <div class="footer__timetable-remark">
               <strong>Вихідні:</strong>
-              понеділок,</br> вівторок
-              </br>
+              понеділок,<br> вівторок
+              <br>
               Каса припиняє роботу за 1
               <span>годину до закриття музею</span>
             </div>
@@ -376,22 +409,32 @@
               Контакти
             </div>
             <div class="footer__address">
-              <a href="https://goo.gl/maps/bcnzhs7nMKdWsry97" target="_blank" alt="address" class="footer__text">
+              <a href="https://goo.gl/maps/bcnzhs7nMKdWsry97"
+                target="_blank"
+                 alt="address"
+                 class="footer__text">
                 вул.М. Грушевського, 6; Київ, 01001
               </a>
             </div>
             <div class="footer__phone">
-              <a href="tel: +38(044)278-13-57" alt="phone" target="_blank" class="footer__text">
+              <a href="tel: +38(044)278-13-57"
+                alt="phone"
+                class="footer__text">
                 тел. +38(044)278-13-57
               </a>
             </div>
             <div class="footer__fax">
-              <a href="fax: +38(044)278-74-54" target="_blank" alt="fax" class="footer__text">
+              <a href="fax: +38(044)278-74-54"
+                alt="fax"
+                class="footer__text">
                 факс +38(044)278-74-54
               </a>
             </div>
             <div class="footer__email">
-              <a href="mailto: info@namu.kiev.ua" target="_blank" alt="email" class="footer__text">
+              <a href="mailto: info@namu.kiev.ua"
+                target="_blank"
+                alt="email"
+                class="footer__text">
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
