--- a/src/index.html
+++ b/src/index.html
@@ -94,25 +94,66 @@
     </nav>
 
     <main>
-      <section class="page__section events" id="events">
+      <section class="page__section" id="events">
         <div class="container">
           <h2 class="page__section-title">
             Актуальні події
           </h2>
 
-          <div class="grid">
-            <div class="grid__item grid__item--desktop-1-7">
-              <img 
-                src="./images/event1.png" 
-                alt="Фото картини 'Йду і повертаюсь'"
-                class="events__photo"
-              >
-            </div>
+          <div class="events">
+            <img
+              src="./images/event1.png"
+              alt="Фото 'Йду і повертаюсь'"
+              class="events__photo"
+            >
 
-            <div class="grid__item grid__item--desktop-9-12">
+            <div class="events__info">
+              <div class="events__top-info">
+                <p class="events__top-info--name">
+                  ВИСТАВКА
+                </p>
+                <p class="events__top-info--date">
+                  26.08-29.11.2019
+                </p>
+              </div>
 
+              <h3 class="events__title">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
             </div>
           </div>
+        
+          <div class="events">
+            <img
+              src="./images/event2.png"
+              alt="Фото 'І спогади і мрії'"
+              class="events__photo"
+            >
+
+            <div class="events__info">
+              <div class="events__top-info">
+                <p class="events__top-info--name">
+                  ВИСТАВКА
+                </p>
+                <p class="events__top-info--date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="events__title">
+                І спогади і мрії
+              </h3>
+
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
         </div>
       </section>
 
