--- a/src/index.html
+++ b/src/index.html
@@ -153,44 +153,29 @@
               </p>
             </div>
           </div>
-
-          <!-- <div class="grid">
-            <div class="grid__item grid__item--desktop-1-7">
-              <img
-              src="./images/event1.png"
-              alt="Фото 'Йду і повертаюсь'"
-              class="events__photo"
-              >
-            </div>
-
-            <div class="grid__item grid__item--desktop-9-12">
-              <div class="events__info">
-                <div class="events__top-info">
-                  <p class="events__top-info--name">
-                    ВИСТАВКА
-                  </p>
-                  <p class="events__top-info--date">
-                    26.08-29.11.2019
-                  </p>
-                </div>
-  
-                <h3 class="events__title">
-                  Йду і повертаюсь
-                </h3>
-  
-                <p class="events__description">
-                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                </p>
-              </div>
-          </div> -->
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="page__section anonce">
+        <img
+          src="./images/sections_3_bg.png"
+          alt="Фото 'Від класицизму до романтизму'"
+          class="anonce__photo"
+        >
         <div class="container">
-          <h2 class="page__section-title">
-            третій
-          </h2>
+          <div class="anonce__info">
+            <div class="anonce__info-top">
+              <p class="anonce__info-top--name">
+                Лекція
+              </p>
+              <p class="anonce__info-top--date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <h3 class="anonce__info-title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
         </div>
       </section>
 
