--- a/src/index.html
+++ b/src/index.html
@@ -21,21 +21,18 @@
       <div class="container">
         <div class="header__nav">
           <a href="#menu" class="icon icon--menu"></a>
-          <a href="#" class="logo"
-            >
+          <a href="#" class="logo">
             na
             <br>
             mu
           </a>
         </div>
         <div class="header__content">
-          <h1 class="header__title page__title"
-            >
+          <h1 class="header__title page__title">
             художній музей
           </h1>
           <button class="button">
-            <a href="#tickets" class="button__link"
-              >
+            <a href="#tickets" class="button__link">
               квитки
             </a>
           </button>
@@ -50,26 +47,22 @@
             <a href="#" class="icon icon--cross"></a>
             <ul class="menu__content">
               <li class="menu__title">
-                <a href="#gallery" class="menu__title--link"
-                  >
+                <a href="#gallery" class="menu__title--link">
                   Галерея
                 </a>
               </li>
               <li class="menu__title">
-                <a href="#" class="menu__title--link"
-                  >
+                <a href="#" class="menu__title--link">
                   Про Нас
                 </a>
               </li>
               <li class="menu__title">
-                <a href="#current-events" class="menu__title--link"
-                  >
+                <a href="#current-events" class="menu__title--link">
                   Виставки та події
                 </a>
               </li>
               <li class="menu__title">
-                <a href="#contacts" class="menu__title--link"
-                  >
+                <a href="#contacts" class="menu__title--link">
                   Контакти
                 </a>
               </li>
@@ -88,39 +81,39 @@
             <ul class="menu__list">
               <li class="menu__item">
                 12:00— 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   середа
                 </span>
               </li>
+
               <li class="menu__item">
                 12:00— 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   четвер
                 </span>
               </li>
+
               <li class="menu__item">
                 12:00 — 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   п’ятниця
                 </span>
               </li>
+
               <li class="menu__item">
                 11:00 — 19:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   субота
                 </span>
               </li>
+
               <li class="menu__item">
                 11:00 — 19:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   неділя
                 </span>
               </li>
+
               <li class="menu__item menu__item--last">Вихідні:
                 <span class="menu__item--regular">понеділок, вівторок
                   <br>
@@ -135,8 +128,7 @@
     <main>
       <div id="current-events" class="page__section current-events">
         <div class="container">
-          <h2 class="page__title current-events__title"
-            >
+          <h2 class="page__title current-events__title">
             Актуальні події
           </h2>
           <div
@@ -161,21 +153,17 @@
                 grid__item--tablet-1-4
                 grid__item--desktop-9-12">
               <div class="current-events__exhibition-time">
-                <p class="current-events__exhibition"
-                  >
+                <p class="current-events__exhibition">
                   виставка
                 </p>
-                <p class="current-events__time"
-                  >
+                <p class="current-events__time">
                   26.08-29.11.2019
                 </p>
               </div>
-              <h3 class="current-events__subtitle"
-                >
+              <h3 class="current-events__subtitle">
                 Йду і повертаюсь
               </h3>
-              <p class="current-events__paragraph"
-                >
+              <p class="current-events__paragraph">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </p>
             </div>
@@ -201,21 +189,17 @@
                 grid__item--tablet-1-4
                 grid__item--desktop-9-12">
               <div class="current-events__exhibition-time">
-                <p class="current-events__exhibition"
-                  >
+                <p class="current-events__exhibition">
                   виставка
                 </p>
-                <p class="current-events__time"
-                  >
+                <p class="current-events__time">
                   26.08-29.11.2019
                 </p>
               </div>
-              <h3 class="current-events__subtitle"
-                >
+              <h3 class="current-events__subtitle">
                 І спогади і мрії
               </h3>
-              <p class="current-events__paragraph"
-                >
+              <p class="current-events__paragraph">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
@@ -229,26 +213,22 @@
             >
           <div class="current-events__lection">
             <div class="current-events__exhibition-time current-events__exhibition-time--last">
-              <p class="current-events__exhibition"
-                >
+              <p class="current-events__exhibition">
                 Лекція
               </p>
-              <p class="current-events__time"
-                >
+              <p class="current-events__time">
                 26/08/2019 - 11:00
               </p>
             </div>
-            <h3 class="current-events__subtitle current-events__subtitle--last"
-              >
+            <h3 class="current-events__subtitle current-events__subtitle--last">
               Від класицизму до романтизму
             </h3>
           </div>
         </div>
       </div>
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <div class="container">
-          <h2 class="page__title gallery__title"
-            >
+          <h2 class="page__title gallery__title">
             Галерея
           </h2>
         </div>
@@ -285,8 +265,6 @@
           </div>
           <div class="swiper-pagination gallery__pagination">
           </div>
-
-
         </div>
         <div class="container">
           <div class="gallery__desktop grid grid--not-phone">
@@ -337,18 +315,17 @@
                 grid__item--tablet-2-5
                 grid__item--desktop-4-9"
                 >
-              <h3 class="page__title subscription__title"
-                >
+              <h3 class="page__title subscription__title">
                 Підписка
               </h3>
-              <p class="subscription__paragraph"
-                >
+              <p class="subscription__paragraph">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
               <form
                 action="#"
                 method="get"
                 class="subscription__form"
+                id="form"
               >
                 <input
                   type="email"
@@ -359,14 +336,11 @@
                 <button class="subscription__button" type="submit"></button>
               </form>
             </div>
-
-
           </div>
         </div>
-
       </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container">
         <div class="grid">
           <div
@@ -376,11 +350,8 @@
               grid__item--tablet-1-1
               grid__item--desktop-1-1"
             >
-            <div
-              class="footer__nav"
-              >
-              <a href="#" class="logo logo--footer"
-                >
+            <div class="footer__nav">
+              <a href="#" class="logo logo--footer">
                 na
                 <br>
                 mu
@@ -389,10 +360,8 @@
                 <a href="https://facebook.com" class="icon icon--facebook"></a>
                 <a href="https://instagram.com" class="icon icon--instagram"></a>
               </div>
-
             </div>
           </div>
-
           <div
             class="
               menu__schedule
@@ -414,39 +383,39 @@
             <ul class="menu__list menu__list--footer">
               <li class="menu__item menu__item--footer">
                 12:00— 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   середа
                 </span>
               </li>
+
               <li class="menu__item menu__item--footer">
                 12:00— 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   четвер
                 </span>
               </li>
+
               <li class="menu__item menu__item--footer">
                 12:00 — 20:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   п’ятниця
                 </span>
               </li>
+
               <li class="menu__item menu__item--footer">
                 11:00 — 19:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   субота
                 </span>
               </li>
+
               <li class="menu__item menu__item--footer">
                 11:00 — 19:00
-                <span class="menu__item--regular"
-                  >
+                <span class="menu__item--regular">
                   неділя
                 </span>
               </li>
+
               <li
                 class="
                   menu__item
@@ -455,7 +424,8 @@
                   menu__item--footer-last"
                 >
                 Вихідні:
-                <span class="menu__item--regular">понеділок, вівторок
+                <span class="menu__item--regular">
+                  понеділок, вівторок
                   <br>
                   Каса припиняє роботу за 1 годину до закриття музею
                 </span>
@@ -525,60 +495,45 @@
             grid__item--desktop-8-11"
           >
             <li
-              class="
-                menu__title
-                menu__title--footer"
-              >
-              <a href="#gallery" class="menu__title--link menu__title--footer"
-                >
+              class=" menu__title menu__title--footer">
+              <a href="#gallery" class="menu__title--link menu__title--footer">
                 Галерея
               </a>
             </li>
             <li
-              class="
-                menu__title
-                menu__title--footer"
-              >
-              <a href="#" class="menu__title--link menu__title--footer"
-                >
+              class=" menu__title menu__title--footer">
+              <a href="#" class="menu__title--link menu__title--footer">
                 Про Нас
               </a>
             </li>
-            <li
-              class="
-                menu__title
-                menu__title--footer-2-row"
-              >
-              <a href="#current-events" class="menu__title--link menu__title--footer"
-                >
+            <li class="menu__title menu__title--footer-2-row">
+              <a href="#current-events" class="menu__title--link menu__title--footer">
                 Виставки та події
               </a>
             </li>
-            <li
-              class="
-                menu__title
-                menu__title--footer-2-row"
-              >
-              <a href="#contacts" class="menu__title--link menu__title--footer"
-                >
+            <li class="menu__title menu__title--footer-2-row">
+              <a href="#contacts" class="menu__title--link menu__title--footer">
                 Контакти
               </a>
             </li>
           </ul>
         </div>
         <div class="footer__copyright">
-          <p class="footer__design"
-          >
+          <p class="footer__design">
           Designed by Zhyriada Marina
           </p>
-          <p class="footer__design"
-            >
+          <p class="footer__design">
             Copyright © 2019. All Rights Reserved.
           </p>
         </div>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+      >
+    </script>
   </body>
 </html>
